--- a/MarbleGraniteShop/Areas/Customer/Views/Cart/Index.cshtml
+++ b/MarbleGraniteShop/Areas/Customer/Views/Cart/Index.cshtml
@@ -75,7 +75,7 @@
                         && Model.OrderHeader.ApplicationUser.Company.IsAuthorizedCompany)
                         {
                         <div class="col-8 text-danger">
-                            Email Must be confirmed for ShadeColorized customers!
+                            Email Must be confirmed for Authorized customers!
                         </div>
                         <div class="col-4">
                             <button type="submit" class="btn btn-outline-warning btn-sm">
