--- a/MarbleGraniteShop/Areas/Admin/Views/Company/Upsert.cshtml
+++ b/MarbleGraniteShop/Areas/Admin/Views/Company/Upsert.cshtml
@@ -29,6 +29,15 @@
             </div>
             <div class="form-group row">
                 <div class="col-4">
+                    <label asp-for="Email"></label>
+                </div>
+                <div class="col-8">
+                    <input asp-for="Email" class="form-control" />
+                    <span asp-validation-for="Email" class="text-danger"></span>
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-4">
                     <label asp-for="StreetAddress"></label>
                 </div>
                 <div class="col-8">
@@ -84,12 +93,10 @@
                 <div class="col-8 offset-4">
                     @if (Model.Id != 0)
                     {
-                        <partial name="_EditAndBackToListButton" model="Model.Id" />
-                    }
+        <partial name="_EditAndBackToListButton" model="Model.Id" /> }
                     else
                     {
-                        <partial name="_CreateAndBackToListButton" />
-                    }
+        <partial name="_CreateAndBackToListButton" />}
                 </div>
             </div>
         </div>
