--- a/MarbleGraniteShop/Areas/Customer/Views/Home/Details.cshtml
+++ b/MarbleGraniteShop/Areas/Customer/Views/Home/Details.cshtml
@@ -114,11 +114,11 @@ else
                     <div class="row">
                         <div class="col-8 col-lg-8 col-md-12 col-sm-12">
 
-                            <div class="row pl-2">
+                            @*<div class="row pl-2">
                                 <div class="col-12 col-md-8 pt-2">
                                     <p style="color:maroon; font-size:14px;">Estimate Arrival Date: @DateTime.Now.AddDays(7).ToShortDateString() - @DateTime.Now.AddDays(14).ToShortDateString()</p>
                                 </div>
-                            </div>
+                            </div>*@
                             <div class="row text-center pl-2" style="color:maroon; font-weight:bold">
                                 <div class="p-1 col-lg-2 col-md-2 col-sm-6 col-6  bg-secondary">
                                     <div>Price</div>
@@ -133,7 +133,7 @@ else
                             </div>
                             <br /><br />
                             <div class="row pl-2">
-                                <div class="p-1 col-lg-2 col-md-2 col-sm-6 col-6  text-primary"><h4>Count</h4></div>
+                                <div class="p-1 col-lg-2 col-md-2 col-sm-6 col-6  text-primary"><h4>Sq Feet</h4></div>
                                 <div class="p-1 col-lg-4 col-md-4 col-sm-6 col-6" data-toggle="tooltip" data-placement="top" title="Please Enter Count In Square Feet or Foot!" class="col-10"><input class="form-control" asp-for="Count" /></div>
                             </div>
                         </div>
